--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: iaroslav.email@gmail.com
+  facebook: iaroslav.shcherbatyi.3
   flickr:
-  github: 
+  github: iaroslav-ai
   instagram:
-  linkedin:
+  linkedin: iaroslav.email@gmail.com
   pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: 
