--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: iaroslav.email@gmail.com
+  email:
   facebook: iaroslav.shcherbatyi.3
   flickr:
   github: iaroslav-ai
   instagram:
-  linkedin: iaroslav.email@gmail.com
+  linkedin: pub/iaroslav-shcherbatyi/102/349/89a
   pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: 
