--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: iaroslav-ai
   instagram:
-  linkedin: pub/iaroslav-shcherbatyi/102/349/89a
+  linkedin: /in/iaros
   pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: 
