--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
-_site
-.DS_Store
-.jekyll
-.bundle
-.sass-cache
-Gemfile
-Gemfile.lock
-node_modules
-package.json
+*.py[co]
+*.pyc
+*~
+.ipynb_checkpoints/
+# created by installing scikit-learn from git
+src/*
+build/
+dist/
+*.egg-info/
+.idea/
+.cache/
+
+# vim users
+.*.swp
+
+.idea/
